--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <div class="profile-card">
     <div class="image">
-      <img src="./assets/pic.jpg" alt="My image" class="profile-img">
+      <img src="./assets/pic.png" alt="My image" class="profile-img">
     </div>
     
     <div class="text-data">
