--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     <!-- Social Media Icons -->
     <div class="media-btn">
-      <a href="#" class="link">
+      <a class="link" onclick="location.href='https://github.com/DEEPAK-498'">
         <i class='bx bxl-github'></i>
       </a>  
-      <a href="#" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);" class="link">
+      <a style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);" class="link" onclick="location.href='https://www.instagram.com/btwitsdeepak._/'">
         <i class='bx bxl-instagram'></i>
       </a>
     </div>
