--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <!-- Buttons -->
     <div class="buttons">
-      <button class="btn1">Email Me</button>
+      <a href="mailto:Deepak_Kumar_Das_01@proton.me"><button class="btn1">Email Me</button></a>
       <button class="btn2">Show More</button>
     </div>
     <span id="line"></span>
